--- a/1-7.html
+++ b/1-7.html
@@ -1,19 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Курс JavaScript</title>
+    <script>
+        // инициализация переменных
+        const NAME = 'Василий';
+        const LOGIN = 'vasya123';
+        const AGE = '18';
+        const EMAIL = 'vasya123@mail.ru';
+    </script>
 </head>
 
 <body>
-    <!-- 1-6 -->
-    <h1>Зимнее утро</h1>
-    <h3>Александр Сергеевич Пушкин</h3>
-    <script src="main.js"></script>
+
+    <header>
+        <h1 align="center">Введение в JavaScript</h1>
+    </header>
+
+    <div class="content">
+        <script>
+            // выведем значения переменных
+            console.log("Исходные значения переменных");
+            console.log('Имя: ' + NAME);
+            console.log('Логин:' + LOGIN);
+            console.log('Возраст:' + AGE);
+            console.log('E-mail:' + EMAIL);
+
+            // переопределим значения переменных
+            let name = 'Анна';
+            let login = 'anyta987';
+            let age = '17';
+            let email = 'anyta987@mail.ru';
+
+            // выведем новые значения переменных
+            console.log("Новые значения переменных");
+            console.log('Имя: ' + name);
+            console.log('Логин:' + login);
+            console.log('Возраст:' + age);
+            console.log('E-mail:' + email);
+        </script>
+    </div>
+
 </body>
 
 </html>
