--- a/1-8.html
+++ b/1-8.html
@@ -5,10 +5,15 @@
     <title>Курс JavaScript</title>
     <script>
         // инициализация переменных
-        const NAME = 'Василий';
-        const LOGIN = 'vasya123';
-        const AGE = '18';
-        const EMAIL = 'vasya123@mail.ru';
+        let SURNAME = 'Ивнович';
+        let NAME = 'Василий';
+        let PATRONIMIC = 'Игоревна';
+        let OPUCATION = 'Преподаватель';
+        let DEGREE = 'Высшее';
+        let DISCRIPTION = 'PHP';
+        let LOGIN = 'vasya123';
+        let AGE = '18';
+        let EMAIL = 'vasya123@mail.ru';
     </script>
 </head>
 
@@ -21,11 +26,11 @@
     <div class="content">
         <script>
             // выведем значения переменных
-            console.log("Исходные значения переменных");
-            console.log('Имя: ' + NAME);
-            console.log('Логин:' + LOGIN);
-            console.log('Возраст:' + AGE);
-            console.log('E-mail:' + EMAIL);
+            document.write("Исходные значения переменных <br>");
+            document.write('Имя: ' + NAME + '<br>');
+            document.write('Логин:' + LOGIN + '<br>');
+            document.write('Возраст:' + AGE + '<br>');
+            document.write('E-mail:' + EMAIL + '<br>' + '<br>');
 
             // переопределим значения переменных
             let name = 'Анна';
@@ -34,11 +39,11 @@
             let email = 'anyta987@mail.ru';
 
             // выведем новые значения переменных
-            console.log("Новые значения переменных");
-            console.log('Имя: ' + name);
-            console.log('Логин:' + login);
-            console.log('Возраст:' + age);
-            console.log('E-mail:' + email);
+            document.write("Новые значения переменных");
+            document.write('Имя: ' + name + '<br>');
+            document.write('Логин:' + login + '<br>');
+            document.write('Возраст:' + age + '<br>');
+            document.write('E-mail:' + email + '<br>');
         </script>
     </div>
 
